operator/packages/zarf_nginx_self_ca/nginx-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  ports:
    - targetPort: web
      port: 80
      name: web
  selector:
    app: nginx
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 3
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:1.29.3
          ports:
            - name: web
              containerPort: 80
          volumeMounts:
            - name: nginx-volume
              mountPath: /usr/share/nginx/html
            - name: nginx-startup-script-volume
              mountPath: /docker-entrypoint.d/start.sh
              subPath: start.sh
          command: ["/bin/sh", "/docker-entrypoint.d/start.sh"]
      volumes:
        - name: nginx-volume
          emptyDir: {}  # Change to emptyDir for writable directory
        - name: nginx-startup-script-volume
          configMap:
            name: nginx-startup-script
